Styled header using flexbox.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
 
   <body>
 
-    <!-- Header Section -->
+    <!-- Header Container -->
 
-    <div class="Header">
+    <div class="header">
 
       <!-- Header boxes -->
 
-      <div class="logo"><img src="./resources/images/logo.jpg"><h2>My Times</h2></div>
-      <div class="nav-bar"><h3>World</h3></div>
-      <div class="nav-bar"><h3>U.S.</h3></div>
-      <div class="nav-bar"><h3>Tech</h3></div>
-      <div class="nav-bar"><h3>Science</h3></div>
+      <div class="logo"><img src="./resources/images/logo.jpg" alt="logo"><span>My Times</span></div>
+      <div class="nav-bar"><span><a href="./index.html">World</a></span><span><a href="./index.html">U.S.</a></<span><span><a href="./index.html">Tech</a></span><span><a href="./index.html">Science</a></span></div>
 
     </div>
 
