--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Logo Box -->
       <div class="logo"><img src="./resources/images/logo.jpg" alt="My Times Logo"><span>My Times</span></div>
       <!-- Navbar Box -->
-      <div class="navbar"><span><a>World</a></span><span><a>U.S.</a></span><span></a>Tech</a></span><span><a>Science</a></span></div>
+      <div class="navbar"><span><a href="./index.html">World</a></span><span><a href="./index.html">U.S.</a></span><span><a href="./index.html">Tech</a></span><span><a href="./index.html">Science</a></span></div>
 
     </div>
 
@@ -35,9 +35,9 @@
 
         <div class="byline" id="orca"><h2>Orca Spends Vacation at Land World Puget</h2><p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p></div>
 
-        <div class="byline" id="earth"><h1>Earth Spins Backwards for 2017</h1></div>
-
         <div class="byline" id="burger"><h2>Burger for Breakfast: How Early is too Early?</h2><p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p></div>
+
+        <div class="byline" id="earth"><h1>Earth Spins Backwards for 2017</h1></div>
 
         <div class="byline" id="camera"><h1>Research Shows Cameras Erase Memory</h1></div>
 
