Final main content layout.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <img src="./resources/images/cookie.png" alt="Cookie">
 
-        <div class="byline" id="bites"><h3>NEWS BITES</h3><p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p></div>
+        <div class="byline" id="bites"><h3>NEWS BITES</h3><span>Cat Emoji Goes Viral</span><span>Buy Youtube Views</span><span>Home Business Advertising Ideas</span><span>Advertising Internet Online</span><span>Illustration in Marketing Materials</span><span>Finally a Top Secret Way You Can</span></div>
 
       </div>
 
