Added footer and happy with final outcome.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
 
     </div>
 
+    <!-- Footer -->
 
+    <div class="footer">
+
+      <div class="footer-bar">
+        <span id="logo">MY Times</span><span><a href="./index.html">World</a></span><span><a href="./index.html">U.S.</a></span><span><a href="./index.html">Tech</a></span><span><a href="./index.html">Science</a></span>
+      </div>
+
+      <div class="footer-copy">
+        <span>© 2016, My Times (A Division of Codecademy bite)</span>
+      </div>
+
+    </div>
 
   </body>
 
